syntax = "proto3";

option java_package = "gregoiregeis.studykorean.proto";
option java_multiple_files = true;

message TokenizedText {
  message Token {
    string text = 1;
    optional int32 word_id = 2;
  }

  string text = 1;
  repeated Token tokens = 2;
}

// An entry identified by the text of the word or expression.
message Word {
  message Meaning {
    // We don't encode examples right now because there's too many
    // of them, we don't have accurate translations of them, and
    // their quantity makes it prohibitive to tokenize them all.
    //
    // message Example {
    //   message Conversation {
    //     repeated string sentences = 1;
    //   }
    //
    //   oneof type {
    //     string phrase = 1;              // 구
    //     string sentence = 2;            // 문장
    //     Conversation conversation = 3;  // 대화
    //   }
    // }

    message WordRef {
      string text = 1;
      repeated int32 word_ids = 2;
    }

    TokenizedText definition = 1;
    string translation = 2;
    string definition_translation = 3;

    // See comment above.
    // repeated Example examples = 4;

    repeated WordRef related = 5;
    repeated WordRef original_forms = 6;
    repeated WordRef synonyms = 7;
    repeated WordRef antonyms = 8;
    repeated WordRef honorifics = 9;
    repeated string abbreviations = 10;
  }

  message RelatedForm {
    string text = 1;

    oneof id {
      int32 verb_form = 2;  // 파생어; noun -> verb
      int32 noun_form = 3;  // 가봐라; verb -> noun
    }
  }

  message Defined {
    int32 word_id = 1;
    string text = 2;
    string pos = 3; // As in PartOfSpeech.id
    string lexical_unit = 6;
    string origin = 7;
    string pronunciation = 8;
    string sound_url = 9;

    repeated Meaning meanings = 10;
    repeated RelatedForm related_forms = 11;

    repeated int32 example_ids = 12;
    repeated int32 appears_in_definition_of = 13;
  }

  string text = 1;

  optional Defined noun = 2; // 명사
  optional Defined dependent_noun = 3; // 의존 명사
  optional Defined pronoun = 4; // 대명사
  optional Defined interjection = 5; // 감탄사
  optional Defined verb = 6; // 동사
  optional Defined aux_verb = 7; // 보조 동사
  optional Defined aux_adjective = 8; // 보조 형용사
  optional Defined eomi = 9; // 어미, verb suffix
  optional Defined adjective = 10; // 형용사
  optional Defined adverb = 11; // 부사
  optional Defined josa = 12; // 조사, particle
  optional Defined determiner = 13; // 관형사
  optional Defined modifier = 14; // 접사
  optional Defined number = 15; // 수사
  optional Defined abbreviation = 16; // 약어
  optional Defined phrase = 17; // 구

  int32 score = 20;
  optional int32 most_common = 21;
}

message Example {
  int32 example_id = 1;
  TokenizedText ko_sentence = 2;
  string en_translation = 3;
  string en_translation_alt = 4;
  string notes = 5;

  optional int32 sound_id = 6;
}

message AllData {
  message PartOfSpeech {
    string id = 1;  // English identifier as used in Word
    string ko = 2;
    string en = 3;
    string en_alt = 4;
    int32 word_id = 5;
  }

  repeated Word words = 1;
  repeated Example examples = 2;
  repeated PartOfSpeech pos = 3;
}
